# kensington-sources

./: .gitignore  README.md  community_organization_2026-03-25T22-30-43.jsonl  community_organization_2026-03-25T22-31-13.jsonl  community_organization_2026-03-25T22-31-49.jsonl  community_organization_2026-03-25T22-38-10.jsonl  government_website_2026-03-25T22-31-21.jsonl  government_website_2026-03-25T22-31-40.jsonl  government_website_2026-03-25T22-38-09.jsonl  government_website_2026-03-25T22-38-11.jsonl  government_website_2026-03-25T22-38-12.jsonl  government_website_2026-03-26T08-40-53.jsonl  government_website_2026-03-26T08-40-54.jsonl  government_website_2026-03-26T08-40-55.jsonl  government_website_2026-03-26T08-45-12.jsonl  government_website_2026-03-26T08-45-13.jsonl  government_website_2026-03-26T08-57-58.jsonl  government_website_2026-03-26T08-59-38.jsonl  government_website_2026-03-26T09-05-12.jsonl  news_website_2026-03-25T22-32-00.jsonl  news_website_2026-03-25T22-32-01.jsonl  nyc_open_data_2026-03-25T22-38-09.jsonl  nyc_open_data_2026-03-25T22-38-11.jsonl  nyc_open_data_2026-03-26T08-40-53.jsonl  nyc_open_data_2026-03-26T08-40-54.jsonl  nyc_open_data_2026-03-26T08-45-13.jsonl  pyproject.toml  scrape_log.txt  setup_sources.py  setup_sources_v2.py  social_media_twitter_2026-03-25T22-32-01.jsonl  website_2026-03-25T22-30-29.jsonl  website_2026-03-25T22-30-30.jsonl  website_2026-03-25T22-30-31.jsonl  website_2026-03-25T22-30-32.jsonl  website_2026-03-25T22-30-33.jsonl  website_2026-03-25T22-30-34.jsonl  website_2026-03-25T22-30-35.jsonl  (+86 more)
models/: __init__.py  (+9 more)
(+529 files in other folders)
