[project]
name = "kensington-sources"
version = "0.1.0"
description = "News source scrapers for Kensington, Brooklyn"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Seamus Martin", email = "seamus@alpresspass.com" }
]
license = { text = "MIT" }
dependencies = [
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "feedparser>=6.0.10",
    "pydantic>=2.0.0",
]

[project.scripts]
scrape-all = "src.main:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
